# swarm-core

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
Docs/: CORE_EXTRACTION_ARCHITECTURE.md
swarm-core/bridge/emscripten/: README.md  wasm_bridge.cpp
swarm-core/bridge/emscripten/smoke/: smoke.mjs
swarm-core/include/swarm_core/: swarm_core.h  swarm_core_math.h  swarm_core_particles.h  swarm_core_types.h  version.h
swarm-core/src/: arena.cpp  arena.h  integrator.cpp  integrator.h  spatial_grid.cpp  spatial_grid.h  swarm_core.cpp  swarm_core_math.cpp  swarm_core_particles.cpp
swarm-core/tests/: README.md  test_arena.cpp  test_spatial_grid.cpp  test_update.cpp
